Mon Feb 28 07:28:35 2011  Shota Fukumori  <sorah@tubusu.net>

	* lib/test/unit.rb(Test::Unit::Runner#after_worker_quit):
	  method name more be natural English.

	* lib/test/unit.rb(Test::Unit::Runner::Worker.launch):
	  IO.sync doesn't need. Should use "b" for mode.

Sun Feb 27 21:59:37 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* test/ruby/test_system.rb (TestSystem#test_system_redirect_win):
	  add test for system().

Sun Feb 27 18:00:09 2011  Shota Fukumori  <sorah@tubusu.net>

	* lib/test/unit.rb: Refactoring; Worker never use Hash for internal
	storage.

	* lib/test/unit.rb: Never use Kernel#spawn. Use IO.popen instead.

Sun Feb 27 13:16:48 2011  Tanaka Akira  <akr@fsij.org>

	* ext/openssl/ossl_ns_spki.c: parenthesize macro arguments.

Sat Feb 26 17:07:53 2011  Tadayoshi Funaba  <tadf@dotrb.org>

	* lib/date.rb: [Feature #4257]

	* ext/date/extconf.rb: new

	* ext/date/date_core.c: new

Sat Feb 26 16:10:23 2011  Shota Fukumori  <sorah@tubusu.net>

	* lib/test/unit.rb: --jobs-status won't puts over 2 lines.

	* test/testunit/test_parallel.rb: Fix test for above.

	* lib/test/*: refactoring.

Sat Feb 26 07:10:05 2011  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/lib/psych/scalar_scanner.rb: fix parsing timezone's whose
	  whose format is (+/-)hhmm.  Thanks Gon??alo Silva!

	* test/psych/test_scalar_scanner.rb: test for bug.

Thu Feb 24 23:02:55 2011  Tanaka Akira  <akr@fsij.org>

	* ext/openssl/ossl_hmac.c: parenthesize macro arguments.

Thu Feb 24 22:53:10 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* common.mk (love): for the birthday.

Thu Feb 24 22:51:54 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm.c (ruby_vm_destruct): run vm exit hooks after all objects are
	  destructed.

Thu Feb 24 14:40:33 2011  Shota Fukumori  <sorah@tubusu.net>

	* ChangeLog (vim): Modeline for vim

Thu Feb 24 13:39:25 2011  Shota Fukumori  <sorah@tubusu.net>

	* common.mk: Use $RUNRUBY for worker process.

	* lib/test/unit.rb: Fix bug.
